[tool.poetry]
name = "Eru"
version = "0.1.0"
description = ""
authors = ["emptychan <chen19941018@live.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.16.1"
cchardet = "^2.1.7"
logme = "^1.3.2"
aioredis = "^1.3.1"
mmh3 = "^2.5.1"
colorama = "^0.4.4"
aiomysql = "^0.0.21"
lxml = "^4.6.2"
python-dateutil = "^2.8.1"
bs4 = "^0.0.1"
html5lib = "^1.1"
envparse = "^0.2.0"
uvloop = "^0.15.0"
aiorwlock = "^1.0.0"
async-lru = "^1.0.2"
yarl = "^1.6.3"
aioftp = "^0.18.1"
aiopg = {extras = ["sa"], version = "^1.3.3"}
flashtext = "^2.7"
watchdog = "^2.1.6"
pottery = "^2.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
